--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
 
     <link rel="preconnect" href="//fdn.fontcdn.ir" />
     <link rel="preconnect" href="//v1.fontapi.ir" />
-    <link href="https://v1.fontapi.ir/css/Vazir" rel="stylesheet" />
+    <link href="https://v1.fontapi.ir/css/Shabnam" rel="stylesheet" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
